WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276476
AX: ButtonFace color has bad contrast with ButtonText color in dark mode
https://bugs.webkit.org/show_bug.cgi?id=276476
Summary
AX: ButtonFace color has bad contrast with ButtonText color in dark mode
Konstantin Roman
Reported
2024-07-11 04:05:11 PDT
Created
attachment 471868
[details]
example When color-scheme is dark, the ButtonText color is rgb(255, 255, 255) and the ButtonFace is rgb(179,179,179). It's difficult to read text in such contrast. It would be cool if you set the same colors as chromium based browsers: light mode: ButtonFace = rgb(239, 239, 239), ButtonText = rgb(0, 0, 0) dark mode: ButtonFace = rgb(107, 107, 107), ButtonText = rgb(255, 255, 255)
Attachments
example
(5.44 KB, image/png)
2024-07-11 04:05 PDT
,
Konstantin Roman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-18 04:06:13 PDT
<
rdar://problem/131996608
>
Tim Nguyen (:ntim)
Comment 2
2024-09-06 11:40:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33250
EWS
Comment 3
2024-09-06 16:33:14 PDT
Committed
283284@main
(f1063f2472a1): <
https://commits.webkit.org/283284@main
> Reviewed commits have been landed. Closing PR #33250 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug