AX: ButtonFace color has bad contrast with ButtonText color in dark mode https://bugs.webkit.org/show_bug.cgi?id=276476 rdar://131996608

Reviewed by Aditya Keerthi.

Use a system color in dark mode instead of a hardcoded light color.

* LayoutTests/imported/w3c/web-platform-tests/css/css-color/system-color-consistency-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/system-color-support-expected.txt:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::systemColor const):

Canonical link: https://commits.webkit.org/283284@main